--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -9,21 +9,17 @@
 
 
 <body>
-
-	<header class="begin">
+	<nav class="navigation">
+	      	<a href="#">About</a>
+	      	<a href="#">Clients</a>
+	      	<a href="#">Portfolio</a>
+	      	<a href="#">Contact</a>
+      	</nav>
+	<section class="begin">
 		<h1>Matter of Perspective</h1>
 		<p id="subtext">Photography by Roberta Gori</p>
 		<p id="explore"><a href="#" id="link">Start Exploring</a></p>
-	</header>
-
-	<div>
-		<nav class="navigation">
-	      	<a href="#" class="p">About</a>
-	      	<a href="#"  class="p">Clients</a>
-	      	<a href="#" class="p">Portfolio</a>
-	      	<a href="#" class="p">Contact</a>
-      	</nav> 
-	</div>
+	</section>
 
 	<div>
 		<h2 id="quote">Art of Photography</h2>
@@ -32,8 +28,10 @@
 	</div>
 
 	<div class="image">
-		<img src="images/img1.jpg"><img src="images/img2.jpg">
-		<img src="images/img3.jpg"><img src="images/img4.jpg">
+		<img src="images/img1.jpg">
+		<img src="images/img2.jpg">
+		<img src="images/img3.jpg">
+		<img src="images/img4.jpg">
 	</div>
 
 	<div class="c">
@@ -42,15 +40,17 @@
 		<a href="#" id="mail">robertagori@hotmail.it</a>
 	</div>
 
-	<div class="service">
-		<h2 id="ps">photography service</h2>
-		<ul class="list">
-			<li>Professional organization, project management and administration</li>
-			<li>Professional photo editing and retouching</li>
-			<li>Private photoshoots</li>
-			<li>Event photographer</li>
-		</ul>
-	</div>
+	<section class="service">
+		<div>
+			<h2 id="ps">photography service</h2>
+			<ul class="list">
+				<li>Professional organization, project management and administration</li>
+				<li>Professional photo editing and retouching</li>
+				<li>Private photoshoots</li>
+				<li>Event photographer</li>
+			</ul>
+		</div>
+	</section>
 
 	<div class="information">
 		<h2 class="contact">MATTER OF PHOTOGRAPGY- Roberta Gori</h2>
